Final responsiveness touches to services page, disabled hover effects for mobile in order to improve usability and performance, Replaced several fixed units with relative ones for an improved mobile view, Added scrollbar styling, Fixed contact checbox label positioning in mobile view

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,4 @@
+/*Color palette*/
 /*Card animation*/
 .border_item::before,
 .border_item::after {
@@ -62,6 +63,12 @@ main {
   color: #D4B170;
 }
 
+@media (hover: none) {
+  a:hover, .button:hover, .border_item:hover, .float:hover, .nav-link-button:hover {
+    background-color: initial;
+    color: initial;
+  }
+}
 .button {
   width: fit-content;
   text-decoration: none;
@@ -105,6 +112,17 @@ main {
   70% {
     transform: translateY(-1rem);
     opacity: 0;
+  }
+}
+@media (max-width: 550px) {
+  .scrollerContainerServices {
+    display: none;
+  }
+  .item4::after {
+    content: "Learn more about our services below";
+  }
+  .grid_container {
+    margin-bottom: 50px;
   }
 }
 .top {
@@ -345,6 +363,18 @@ form .row {
     background-color: #c29f5e !important;
   }
 }
+::-webkit-scrollbar {
+  width: 12px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #0b0b0b;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #FFF5EA;
+}
+
 .vehicles_main {
   background-color: #0b0b0b;
   color: #FFF5EA;
@@ -723,6 +753,11 @@ input::placeholder {
   color: grey !important;
 }
 
+@media (max-width: 566px) {
+  #checkbox_label {
+    width: 280px;
+  }
+}
 .indexMain {
   overflow: visible;
 }
@@ -883,7 +918,7 @@ input::placeholder {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: 750px;
-  grid-template-rows: 620px;
+  grid-template-rows: calc(100vh - 315px);
   gap: 5px;
 }
 
@@ -1009,22 +1044,6 @@ input::placeholder {
     font-size: 25px;
   }
 }
-@media (max-width: 1200px) {
-  .grid_container {
-    grid-template-rows: 300px;
-  }
-  .grid_item p {
-    font-size: 20px;
-  }
-  .grid_item .button {
-    font-size: 20px;
-  }
-}
-@media (max-width: 1100px) {
-  .grid_container {
-    grid-template-rows: 225px;
-  }
-}
 @media (max-width: 1000px) {
   .grid_container {
     padding-top: 0px;
@@ -1060,6 +1079,11 @@ input::placeholder {
   }
   .services_title {
     font-size: 35px;
+  }
+}
+@media (max-width: 460px) {
+  .service_horizontal_card p {
+    font-size: 12px;
   }
 }
 
