--- a/sass/base/reset.scss
+++ b/sass/base/reset.scss
@@ -18,3 +18,9 @@ main{
     background-color: $signature_white;
     color: $signature_color;
 }
+@media (hover: none) {
+    a:hover, .button:hover, .border_item:hover, .float:hover, .nav-link-button:hover{
+        background-color: initial;
+        color: initial;
+    }
+}
