--- a/sass/pages/services.scss
+++ b/sass/pages/services.scss
@@ -11,7 +11,7 @@
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: 750px;
-    grid-template-rows: 620px;
+    grid-template-rows: calc(100vh - 315px);
     gap: 5px;
 }
 .grid_item {
@@ -136,24 +136,6 @@
         }
     }
 }
-@media (max-width: 1200px) {
-    .grid_container {
-        grid-template-rows: 300px;
-    }
-    .grid_item {
-        p {
-            font-size: 20px;
-        }
-        .button {
-            font-size: 20px;
-        }
-    }
-}
-@media (max-width: 1100px) {
-    .grid_container {
-        grid-template-rows: 225px;
-    }
-}
 @media (max-width: 1000px) {
     .grid_container {
         padding-top: 0px;
@@ -194,5 +176,12 @@
     }
     .services_title {
         font-size: 35px;
+    }
+}
+@media (max-width: 460px){
+    .service_horizontal_card{
+        p{
+            font-size: 12px;
+        }
     }
 }
